--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react-scripts": "5.0.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/react": "^12.1.4",
     "@types/react": "17.0.20",
     "@types/react-dom": "17.0.9",
     "typescript": "4.4.2"
