--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^14.1.0",
     "@types/react": "17.0.20",
     "@types/react-dom": "17.0.9",
     "typescript": "4.4.2"
