--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "react-scripts": "5.0.0"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^14.1.0",
     "@types/react": "17.0.20",
     "@types/react-dom": "17.0.9",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "typescript": "4.4.2"
   },
   "scripts": {
