--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "esModuleInterop": true,
     "lib": ["dom", "es6"],
     "jsx": "react-jsx",
-    "target": "es6",
+    "target": "esnext",
     "allowJs": true,
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
