Add cypress.d.ts to tsconfig.json include

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["./src/**/*"],
+  "include": ["./src/**/*", "cypress.d.ts"],
   "compilerOptions": {
     "baseUrl": ".",
     "strict": true,
