--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@testing-library/user-event": "^14.1.0",
     "@types/react": "17.0.20",
     "@types/react-dom": "17.0.9",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
     "cypress": "^13.6.2",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
-    "typescript": "4.4.2"
+    "typescript": "^5.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
