--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,28 @@
 {
-  "include": ["./src/**/*", "cypress.d.ts"],
   "compilerOptions": {
-    "baseUrl": ".",
-    "strict": true,
-    "esModuleInterop": true,
-    "lib": ["dom", "es6"],
-    "jsx": "react-jsx",
-    "target": "esnext",
-    "allowJs": true,
+    "target": "ES2020",
+    "useDefineForClassFields": true,
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "module": "ESNext",
     "skipLibCheck": true,
-    "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true,
-    "noImplicitAny": true,
-    "noImplicitReturns": true,
-    "noUnusedLocals": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
+
+    /* Bundler mode */
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true
-  }
+    "noEmit": true,
+    "jsx": "react-jsx",
+
+    /* Linting */
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+
+    /* Jest */
+    "types": ["jest"]
+  },
+  "include": ["src", "src/components"],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
